# HW_from_les_24

./: .env  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app_course/: apps.py  models.py  permission.py  serializers.py  services.py  tasks.py  tests.py  urls.py  views.py
app_course/migrations/: 0001_initial.py  0002_course_owner.py  0003_subscription.py  0004_course_amount.py
app_lesson/: apps.py  models.py  permission.py  serializers.py  tests.py  urls.py  views.py
app_lesson/migrations/: 0001_initial.py  0002_initial.py  0003_alter_lesson_course.py  0004_alter_lesson_course.py  0005_lesson_owner.py
app_payments/: apps.py  models.py  serializers.py  urls.py  views.py
app_payments/migrations/: 0001_initial.py
app_users/: models.py  serializers.py  tasks.py  urls.py  views.py
app_users/management/commands/: csu_a.py  csu_s.py
app_users/migrations/: 0001_initial.py  0002_alter_user_managers_user_is_verified_and_more.py  0003_remove_user_is_verified_and_more.py
config/: settings.py  urls.py
